# llmframe

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_ui.html
.github/workflows/: publish.yml
examples/: basic_rag.py  multi_provider.py  streaming_chat.py
src/llmframe/: __init__.py
src/llmframe/api/: app.py
src/llmframe/core/: config.py  logging.py  types.py
src/llmframe/memory/: __init__.py  conversation.py
src/llmframe/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/llmframe/rag/: __init__.py  chunking.py  embeddings.py  hybrid_search.py  pipeline.py  reranker.py  vectorstore.py
tests/: test_api.py  test_chunker.py  test_pipeline.py
