[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmframe"
version = "0.1.0"
description = "Production-grade RAG + multi-LLM framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]
local = [
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
]
all = ["llmframe[rag,api]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmframe"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
